tests/fixtures/negative/skt1-missing-tag-format-minimum-size.hex
534b543101000000000000000000000000
